--- a/home.css
+++ b/home.css
@@ -15,3 +15,35 @@ body {
     margin: 0px;
     font-family: manuel;
 }
+.navbar-item{
+    font-size: 20px;
+    padding: 20px
+}
+#navbar1 {
+background-color: beige ;
+}
+.container-fluid{
+    background-color: beige ;
+}
+.navbar navbar-expand-lg bg-body-tertiary {
+    background-color: beige ;
+}
+/* end of nav bar css */
+
+.card-img1 {
+    height: 300px;
+    /* padding: 50px; */
+    width: fill;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.card text-bg-dark {
+    height: 300px;
+    padding: 50px;
+    margin: 40px;
+    width: fill;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+}
