--- a/parkinglot.css
+++ b/parkinglot.css
@@ -1,112 +1,103 @@
+.navbar {
+    background-color: beige ;
+}
 body {
-    background-image: url(parkinglot1\ .jpg);
+    background-image: url("img4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 753px;
 }
-/* .glass {
-    background: rgba(71, 71, 73, 0.5); 
-    box-shadow: 0 0 10px rgba(230, 217, 217, 0.2); 
-    border-radius: 10px; 
-    width: 350px;
-    color: rgb(201, 195, 195);
-    padding: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 15PX;
-    margin: 150px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
-
-.registration-form{
-	padding: 50px 0;
-}
-
-.registration-form form{
-    background-color: #fff;
-    max-width: 600px;
-    margin: auto;
-    padding: 50px 70px;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-}
-
-.registration-form .form-icon{
-	text-align: center;
-    background-color: #5891ff;
-    border-radius: 50%;
+.navbar-brand {
     font-size: 40px;
-    color: white;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    margin-bottom: 50px;
-    line-height: 100px;
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+    font-family: manuel;
+}
+.navbar-item{
+    font-size: 20px;
+    padding: 20px
+}
+#navbar1 {
+background-color: beige ;
+}
+/* .container-fluid{
+    background-color: beige ; */
+/* } */
+.navbar navbar-expand-lg bg-body-tertiary {
+    background-color: beige ;
+}
+/* end of nav bar css */
+
+/* CARD CSS */
+@import url('https://fonts.googleapis.com/css?family=Poppins|Ubuntu&display=swap');
+*{box-sizing: border-box;margin: 0;padding: 0}
+
+body{
+    font-family: 'Ubuntu',sans-serif
 }
 
-.registration-form .item{
-	border-radius: 20px;
-    margin-bottom: 25px;
-    padding: 10px 20px;
+.box{
+    position: relative;
+    width: 100%;padding-right: 15px;
+    padding-left: 15px
 }
 
-.registration-form .create-account{
-    border-radius: 30px;
-    padding: 10px 20px;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: #5791ff;
-    border: none;
-    color: white;
-    margin-top: 20px;
-}
-
-.registration-form .social-media{
-    max-width: 600px;
-    background-color: #fff;
-    margin: auto;
-    padding: 35px 0;
+.our-services{
+    margin-top: 75px;
+    padding-bottom: 30px;
+    padding: 0 60px;
+    min-height: 198px;
     text-align: center;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    color: #9fadca;
-    border-top: 1px solid #dee9ff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+    border-radius: 10px;
+    background-color:darkred;
+    transition: all .4s ease-in-out;
+    box-shadow: 0 0 25px 0 rgba(20,27,202,.17)
 }
 
-.registration-form .social-icons{
-    margin-top: 30px;
-    margin-bottom: 16px;
+.our-services .icon{
+    margin-bottom: -21px;
+    transform: translateY(-50%);
+    text-align: center
 }
 
-.registration-form .social-icons a{
-    font-size: 23px;
-    margin: 0 3px;
-    color: #5691ff;
-    border: 1px solid;
-    border-radius: 50%;
-    width: 45px;
-    display: inline-block;
-    height: 45px;
-    text-align: center;
-    background-color: #fff;
-    line-height: 45px;
+.our-services:hover h4, .our-services:hover p{
+    color: #fff
 }
 
-.registration-form .social-icons a:hover{
-    text-decoration: none;
-    opacity: 0.6;
+.speedup:hover{
+    box-shadow: 0 0 25px 0 rgba(20,27,201,.05);
+    cursor: pointer;
+    background-image: linear-gradient(-45deg, #fb0054 0%, #f55b2a 100%)
 }
 
-@media (max-width: 576px) {
-    .registration-form form{
-        padding: 50px 20px;
-    }
-
-    .registration-form .form-icon{
-        width: 70px;
-        height: 70px;
-        font-size: 30px;
-        line-height: 70px;
-    }
+.settings:hover{
+    box-shadow: 0 0 25px 0 rgba(20,27,201,.05);
+    cursor: pointer;
+    background-image: linear-gradient(-45deg, #34b5bf 0%, #210c59 100%)
 }
+
+.privacy:hover{
+    box-shadow: 0 0 25px 0 rgba(20,27,201,.05);
+    cursor: pointer;
+    background-image: linear-gradient(-45deg, #3615e7 0%, #44a2f6 100%)
+}
+
+.backups:hover{
+    box-shadow: 0 0 25px 0 rgba(20,27,201,.05);
+    cursor: pointer;
+    background-image: linear-gradient(-45deg, #fc6a0e 0%, #fdb642 100%)
+}
+
+.ssl:hover{box-shadow: 0 0 25px 0 rgba(20,27,201,.05);
+    cursor: pointer;
+    background-image: linear-gradient(-45deg, #8d40fb 0%, #5a57fb 100%)
+}
+
+.database:hover{
+    box-shadow: 0 0 25px 0 rgba(20,27,201,.05);
+    cursor: pointer;
+    background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%)
+}
+
